# rag_system

./: .gitignore  docker-compose.yml  pyproject.toml
app/chat/: chat_service.py
app/core/: config.py  database.py  db_test.py  logging.py
app/llm/: context_assembler.py  context_budget.py  context_builder.py  llm_provider.py  tokenizer.py
app/memory/: conversation_memory_service.py  conversation_service.py  conversation_summarizer.py  message_service.py  semantic_memory_service.py  sematic_memory_retrieval.py
app/models/: __init__.py  conversation.py  identity.py  memory.py  message_archive.py  semantic_memory.py  structured_memory.py
app/prompts/: loader.py  system_prompt.txt
app/retrieval/: embedding_service.py  init_qdrant.py  vector_store.py
app/scripts/: test_chat_service.py  test_context_budget.py  test_semantic_memory.py
migrations/: env.py
migrations/versions/: 2ed634e93182_add_server_default_to_created_at.py  39fb3fe1793b_add_messages_archive_table.py  447812273b25_create_conversations_and_messages.py  493e0d30729b_create_conversation_summaries.py  4c47cc936ca4_create_identity_tables.py  4dedf18f27d9_create_semantic_long_term_memory.py  8b0c41f64646_create_structured_long_term_memory.py  f4261fbacba9_add_messages_archive_table.py
rag_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
